Bug 296687 TSM (IME) candidate window is displayed at wrong position (too below). patch by Katsuhiro MIHARA <katsuhiromihara@goo.jp> r=josh, sr=sfraser